--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Simple HTML Project</title>
-        <link rel="stylesheet" href="styles.css">
-    </head>
-    <body>
-        <header>
-            <h1>Welcome to My Simple Project</h1>
-        </header>
-        <main>
-            <p id="description">This is a simple project with HTML, CSS, and JavaScript.</p>
-            <button id="changeText">Click Me</button>
-        </main>
-        <script src="script.js"></script>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Games</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
+    <main>
+        <form id="settings">
+            <label for="boardColor">Board Color:</label>
+            <input type="color" id="boardColor" value="#000000">
+            <label for="snakeColor">Snake Color:</label>
+            <input type="color" id="snakeColor" value="#00FF00">
+            <label for="boardSize">Board Size:</label>
+            <input type="number" id="boardSize" min="4" value="10"> 
+            <label for="speed">Initial Speed:</label>
+            <input type="number" id="speed" min="1" max="10" value="5">
+            <label for="speedup">Speedup per Apple:</label>
+            <input type="number" id="speedup" step="0.1" value="0.1">
+            <button type="button" id="startGame">Start Game</button>
+        </form>
+        <div id="board"></div>
+    </main>
+    <script src="script.js"></script>
+</body>
 </html>
