--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <input type="number" id="boardSize" min="4" value="20"> 
             <label for="speed">Initial Speed:</label>
             <input type="number" id="speed" min="1" max="10" value="5">
-            <label for="speedup">Speedup per Apple:</label>
+            <label for="speedup">Game Speedup:</label>
             <input type="number" id="speedup" step="0.5" value="10">
             <button type="button" id="startGame">Start Game</button>
         </form>
